--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,6 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/oswald_light</item>
         <item>@font/ubuntu</item>
+        <item>@font/ubuntu_medium</item>
     </array>
 </resources>
