--- a/app/src/main/res/layout/item_picture.xml
+++ b/app/src/main/res/layout/item_picture.xml
@@ -23,7 +23,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/not_selected"
+            android:background="@drawable/checkbox_bg"
             android:buttonTint="@color/transparent"
             android:visibility="invisible"
             android:text="" />
